# rei-vs-asuka

./: Anchor.toml  package-lock.json  package.json
app/: package.json
app/src/: App.css  App.js  Wallet.js
app/src/components/: GirlCard.js
app/src/utils/: config.js  idl.json
programs/rei-vs-asuka/: Cargo.toml
programs/rei-vs-asuka/src/: lib.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-Gcv1NoGVMUSh2awDPCUf2owKL1jg41JvxvCNVZqJQinM.tar  validator-keypair.json  vote-account-keypair.json
test-ledger/.tmpBTcN5F/rocksdb/: IDENTITY
test-ledger/accounts/: 0.2693  1399.2692  1400.2691  1416.2748  1417.2747  1418.2745  1419.2744  1420.2751  1421.2752  1422.2755  1423.2757  1424.2759  1425.2761  1426.2763  1427.2765  1428.2767  1429.2769  1430.2771  1431.2773  1432.2775  1433.2779  1434.2778  1435.2781  1436.2783  1437.2785  1438.2789  1439.2788  1440.2791  1441.2793  1442.2797  1443.2796  1444.2801  1445.2800  1446.2803  1447.2805  1448.2809  1449.2808  1450.2813  1452.2812  1453.2815  (+183 more)
test-ledger/accounts/accounts/: 0.36  13.243
test-ledger/rocksdb/: 000382.sst  000385.sst  000388.sst  000400.sst  000409.sst  000413.sst  000417.sst  000420.sst  000423.sst  000426.sst  000429.sst  000432.sst  LOG  LOG.old.1639343549169598  LOG.old.1639344316594248  MANIFEST-000238
test-ledger/snapshot/1801/: 1801
test-ledger/snapshot/1901/: 1901
test-ledger/snapshot/2001/: 2001
test-ledger/snapshot/2101/: 2101
test-ledger/snapshot/2201/: 2201
test-ledger/snapshot/2301/: 2301
test-ledger/snapshot/2401/: 2401
tests/: rei-vs-asuka.js
(+1 files in other folders)
